# chernoborg

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.selfbuild  README.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
assistente_iesb/: agent.py
assistente_iesb/.adk/: session.db
docs/: ingest-pipeline.mmd  runtime-query-flow.mmd
docs/scalable-rag/: architecture.md
docs/scalable-rag/diagrams/: 01-system-context.mmd  02-containers.mmd  03-ingest-pipeline.mmd  04-query-flow.mmd  05-eks-deployment.mmd  06-aws-infrastructure.mmd  07-pgvector-schema.mmd  08-ci-cd.mmd
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
index/: chunks.jsonl  index.faiss
ingest/: build.py  chunk.py  embed.py  extract.py  manifest.py  models.py  store.py
tests/: accuracy_report.md  accuracy_results.json  questions_pt.json  run_accuracy.py
